# gugu_moveit_kinematics

gugu_moveit_kinematics/: CMakeLists.txt  gugu_ur10e_analytic_kinematics_plugin.xml  kdl_kinematics_plugin_description.xml  package.xml
gugu_moveit_kinematics/gugu_kdl_kinematics_plugin/: CMakeLists.txt
gugu_moveit_kinematics/gugu_kdl_kinematics_plugin/include/moveit/gugu_kdl_kinematics_plugin/: chainiksolver_vel_mimic_svd.hpp  joint_mimic.hpp  kdl_kinematics_plugin.h
gugu_moveit_kinematics/gugu_kdl_kinematics_plugin/src/: chainiksolver_vel_mimic_svd.cpp  kdl_kinematics_plugin.cpp
gugu_moveit_kinematics/gugu_ur10e_analytic_kinematics_plugin/: CMakeLists.txt
gugu_moveit_kinematics/gugu_ur10e_analytic_kinematics_plugin/include/gugu_ur10e_analytic_kinematics_plugin/: joint_mimic.hpp  ur_kin.h  ur_kin_gugu.h  ur_moveit_plugin.h  ur_moveit_plugin_origin.h
gugu_moveit_kinematics/gugu_ur10e_analytic_kinematics_plugin/src/: ur_kin.cpp  ur_kin_gugu.cpp  ur_moveit_plugin.cpp  ur_moveit_plugin_origin.cpp
